# VTKProjects

./: README.md
PolyDataExtractNormals/: CMakeLists.txt  PolyDataExtractNormals.cxx
SmoothPolyDataFilter/: CMakeLists.txt  SmoothPolyDataFilter.cxx
WindowedSincPolyDataFilter/: CMakeLists.txt  WindowedSincPolyDataFilter.cxx
closeClip/: CMakeLists.txt  closeClip-apr21.cxx  closeClip-apr26.cxx  closeClip-apr27.cxx  closeClip-apr30.cxx  closeClip-old.cxx  closeClip.cxx
conformalMapping/: CC098.ply  CMakeLists.txt  CMakeLists.txt.tmp  append_IO  cc.vtk  ccclosed.vtk  closeClipv2  cone.vtk  cone2.vtk  myConformalFlatteningMeshFilter.h  myConformalFlatteningMeshFilter.txx  plane.stl
curvatures/: CMakeLists.txt  curvatures.cxx
flipNormals/: CMakeLists.txt  flipNormals.cxx
genPunch/: CMakeLists.txt  genPunch.cxx
persist/: CMakeLists.txt  cc03_1.ply  persist  persist.cxx  run.sh
smooth/: CMakeLists.txt  smooth.cxx
vtk_to_csv/: CMakeLists.txt  curv_CF001.vtk  run.sh  vtk_to_csv.cxx
